fix: fixed sidebar menu layout

--- a/apps/sword-soldiers/src/app/core/navbar/navbar.component.html
+++ b/apps/sword-soldiers/src/app/core/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar main-container">
+<header class="navbar">
   <a class="navbar__logo" routerLink="">
     <img class="navbar__icon" src="favicon.ico" alt="logo" />
     <h2 class="navbar__title">Sword Soldiers</h2>
