--- a/libs/ui/src/lib/ui/components/sidebar-menu/sidebar-menu.component.scss
+++ b/libs/ui/src/lib/ui/components/sidebar-menu/sidebar-menu.component.scss
@@ -1,28 +1,16 @@
 :host {
   position: fixed;
+  display: contents;
   width: 100%;
-  height: 50%;
-}
-
-.sidebar-menu__wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  height: 100%;
-
-  &--left {
-    flex-direction: row;
-  }
-
-  &--right {
-    flex-direction: row-reverse;
-  }
+  height: 100vh;
+  top: 0;
 }
 
 .sidebar-menu {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
+  position: absolute;
+  background-color: #1e1e1e;
   width: min-content;
   border-radius: 6px;
+  top: 35%;
+  right: 5%;
 }
