feat: updated primeng; added gender and character edition

--- a/libs/ui/src/lib/ui/controls/input-text/input-text.component.html
+++ b/libs/ui/src/lib/ui/controls/input-text/input-text.component.html
@@ -1,9 +1,10 @@
 <div class="input-text">
   <label class="input-text__label" [for]="controlId">{{ label() }}</label>
   <input
+    class="input"
     pInputText
     [type]="type()"
-    [readOnly]="readOnly()"
+    [readonly]="readonly()"
     [id]="controlId"
     [formControl]="formControl"
     [placeholder]="placeholder()"
