--- a/libs/ui/src/lib/ui/styles/_typing.scss
+++ b/libs/ui/src/lib/ui/styles/_typing.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Tiny5&display=swap');
 
 $levels: 1 !default;
 $multiplier: 0.25;
 
+$primary-font: "Open Sans", sans-serif;
 $tiny5: "Tiny5", sans-serif;
 
 @mixin initialize-font-sizes() {
