--- a/apps/sword-soldiers/src/app/core/breadcrumbs/breadcrumbs.component.scss
+++ b/apps/sword-soldiers/src/app/core/breadcrumbs/breadcrumbs.component.scss
@@ -2,3 +2,13 @@
   background: none;
   border: none;
 }
+
+.breadcrumbs {
+  &__link {
+    text-decoration: none;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+}
