feat(game-maps): created maps setting list

--- a/apps/sword-soldiers/src/app/app.component.html
+++ b/apps/sword-soldiers/src/app/app.component.html
@@ -9,3 +9,4 @@
 <ui-sidebar-menu [items]="menuItems" [actions]="actions" [params]="params()" />
 
 <p-toast position="top-center" />
+<p-confirmDialog></p-confirmDialog>
